fix: prevent logo mobile layout shift when menu is expanded

--- a/src/output.css
+++ b/src/output.css
@@ -778,6 +778,10 @@ dialog[open] {
   min-height: 100vh;
 }
 
+.w-4 {
+  width: 1rem;
+}
+
 .w-\[clamp\(1\.6rem\2c 6vw\2c 3rem\)\] {
   width: clamp(1.6rem,6vw,3rem);
 }
@@ -1527,6 +1531,11 @@ dialog[open] {
 
   .md\:w-full {
     width: 100%;
+  }
+
+  .md\:w-max {
+    width: -moz-max-content;
+    width: max-content;
   }
 
   .md\:max-w-none {
